--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --dir src",
+    "lint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
+    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "dayjs": "^1.11.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.2"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
@@ -20,10 +29,11 @@
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
-    "prettier-plugin-tailwind": "^2.2.12",
     "tailwindcss": "^3.0.24",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "typescript": "4.6.3"
   }
 }
